// file: proto/gcommon/v1/metrics/v1/unregistration_options.proto
// version: 1.0.0
// guid: 158ebf54-a2dd-4dae-b8dc-9c9fb19344db

edition = "2023";

package metrics.v1;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metrics";

message UnregistrationOptions {
  // Whether to delete all associated data
  bool delete_data = 1;

  // Whether to delete associated indices
  bool delete_indices = 2;

  // Whether to remove alert rules
  bool remove_alerts = 3;

  // Whether to stop export configurations
  bool stop_exports = 4;

  // Grace period before actual deletion (duration string like "24h")
  string grace_period = 5 [(buf.validate.field).string.min_len = 1];

  // Whether to perform a dry run (show what would be deleted)
  bool dry_run = 6;

  // Whether to force deletion even if metric is in use
  bool force = 7;

  // Whether to create a backup before deletion
  bool create_backup = 8;
}
